# wec2023

./: .gitignore  README.md  capacitor.config.json  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: gh-pages.deploy.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: capacitor.config.json
android/app/src/main/java/com/nexttemplate/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
backend/: GameMode.ts  Grid.ts  Id.ts  Player.ts  Ships.ts  Team.ts  Utils.ts  index.ts  package.json  tsconfig.json
components/: HealthBar.tsx  Input.tsx
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
pages/: game.tsx  index.tsx  mobx.tsx
pages/api/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
stores/: Store.ts
styles/: Home.module.css  globals.css
